--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
     <section class="exploration">
         <div class="container">
             <h3 class="v_pre_title">OUTDOOR EXPLORATION</h3>
-            <h1 class="title wow bounceOut">Gear for when it actually matters.</h1>
+            <h1 class="title">Gear for when it actually matters.</h1>
             <p class="v_text">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse varius enim in eros elementum tristique.</p>
         </div>
     </section>
@@ -90,32 +90,32 @@
                 <p class="v_text setting_v_text">Morbi neque ex, condimentum dapibus congue et, vulputate ut ligula. Vestibulum sit amet urna turpis. Mauris euismod elit et nisi ultrices, ut faucibus orci tincidunt.</p>
             </div>
             <div class="grid_setting ">
-                 <div class="items_setting wow swing">
+                 <div class="items_setting wow bounceOut">
                     <img class="items_setting_img" src="./img/setting/1.png" alt="pictures">
                     <h3 class="items_setting_title">Sustainable sourcing</h3>
                     <p class="items_setting_text">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse varius enim in eros elementum tristique.</p>
                  </div>
-                 <div class="items_setting wow swing">
+                 <div class="items_setting wow bounceOut">
                     <img class="items_setting_img" src="./img/setting/2.png" alt="pictures">
                     <h3 class="items_setting_title">Lifetime warranty</h3>
                     <p class="items_setting_text">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse varius enim in eros elementum tristique.</p>
                  </div>
-                 <div class="items_setting wow swing">
+                 <div class="items_setting wow bounceOut">
                     <img class="items_setting_img" src="./img/setting/3.png" alt="pictures">
                     <h3 class="items_setting_title">All-terrain tested</h3>
                     <p class="items_setting_text">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse varius enim in eros elementum tristique.</p>
                  </div>
-                 <div class="items_setting wow swing">
+                 <div class="items_setting wow bounceOut">
                     <img class="items_setting_img" src="./img/setting/4.png" alt="pictures">
                     <h3 class="items_setting_title">Premium materials</h3>
                     <p class="items_setting_text">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse varius enim in eros elementum tristique.</p>
                  </div>
-                 <div class="items_setting wow swing">
+                 <div class="items_setting wow bounceOut">
                     <img class="items_setting_img" src="./img/setting/5.png" alt="pictures">
                     <h3 class="items_setting_title">Designed by you</h3>
                     <p class="items_setting_text">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse varius enim in eros elementum tristique.</p>
                 </div>
-                    <div class="items_setting wow swing">
+                    <div class="items_setting wow bounceOut">
                     <img class="items_setting_img" src="./img/setting/6.png" alt="pictures">
                     <h3 class="items_setting_title">Quality assured</h3>
                     <p class="items_setting_text">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse varius enim in eros elementum tristique.</p>
